--- a/css/webflow.css
+++ b/css/webflow.css
@@ -599,7 +599,7 @@ textarea.w-select {
   width: 41.66666667%;
 }
 .w-col-6 {
-  /* width: 50%; */
+  width: 50%;
 }
 .w-col-7 {
   width: 58.33333333%;
